--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ plugins {
 }
 
 group 'org.life'
-version '0.1-SNAPSHOT'
+version '0.2-SNAPSHOT'
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
 
@@ -25,4 +25,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+wrapper {
+    gradleVersion = '7.3'
+    distributionType = Wrapper.DistributionType.ALL
 }
