refactor: Changed the launch of the game (starts on button push). Run main loop in own thread.
feat: Add doc comments

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'org.life'
-version '0.2-SNAPSHOT'
+version '0.3-SNAPSHOT'
 
 sourceCompatibility = '17'
 targetCompatibility = '17'
@@ -20,7 +20,7 @@ repositories {
 }
 
 dependencies {
-    compileClasspath 'ch.qos.logback:logback-classic:1.2.10'
+    implementation 'ch.qos.logback:logback-classic:1.2.10'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
